issue #120 vertival whitespace reduced

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,8 @@ table#summary_printed td{
   }
   h2,h3,h4{
     font-size: 12px;
+    line-height: 8px;
+
   }
   font-size: 10px;
 }
